--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="card-body br">
             <h5 class="card-title">VIDEO</h5>
             <p class="card-text">Download Property Videos</p>
-            <a href="./img/high res (1).rar" class="btn btn-primary">Download</a
+            <a href="./img/919 Hannah AVE.mp4" class="btn btn-primary">Download</a
             ><br /><br />
             <input
               class="input"
@@ -135,7 +135,14 @@
 
       </div>
     </div>
-   
+    <footer class="bg-light text-center text-lg-start">
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2020 Copyright:
+        <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
 
     <script src="./app.js"></script>
     <script
