--- a/index.html
+++ b/index.html
@@ -97,19 +97,14 @@
           <div class="card-body br">
             <h5 class="card-title">VIDEO</h5>
             <p class="card-text">Download Property Videos</p>
-            <a href="./img/919 Hannah AVE.mp4" class="btn btn-primary">Download</a
-            ><br /><br />
-            <input
-              class="input"
-              type="text"
-              value="<iframe width='853' height='480' src='https://my.matterport.com/show/?m=1ogs2W7qoPp' frameborder='0' allowfullscreen allow='xr-spatial-tracking'></iframe>"
-              id="myInput"
-            />
+            <a href="./img/919 Hannah AVE.mp4" class="btn btn-primary" target="__blank">View</a
+              ><br /><br />
+            <a href="./img/919 Hannah AVE.rar" class="btn btn-primary">Download</a
+            >
+           
 
             <!-- The button used to copy the text -->
-            <button class="btn btn-primary" onclick="myFunction()">
-              Copy text
-            </button>
+            
           </div>
         </div>
       </div>
@@ -138,8 +133,8 @@
     <footer class="bg-light text-center text-lg-start">
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2020 Copyright:
-        <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+        © 2022 Copyright:
+        <a class="text-dark" href="www.keont.com">KEONT DIGITALS</a>
       </div>
       <!-- Copyright -->
     </footer>
