--- a/index.html
+++ b/index.html
@@ -118,9 +118,10 @@
         <div class="col-md-6 how-img">
           <img src="./img/logo.jpg" class="img-fluid" alt="logo" />
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" style = "margin-top: 30px;" >
           <h4>MILLENNIUM STUDIOS</h4>
-          <h3 class="subheading">Contact Us</h3>
+          
+          <br />
 
           <h3>millenniumstudios.ca@gmail.com</h3>
           <h3>416-576-1883</h3>
