--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
           <h3>millenniumstudios.ca@gmail.com</h3>
           <h3>416-576-1883</h3>
-          <h3>www.keont.com</h3>
+          
         </div>
       </div>
 
@@ -134,8 +134,7 @@
     <footer class="bg-light text-center text-lg-start">
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2022 Copyright:
-        <a class="text-dark" href="www.keont.com">KEONT DIGITALS</a>
+        © 2022 Copyright: KEONT DIGITALS 
       </div>
       <!-- Copyright -->
     </footer>
