--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
             <p class="card-text">Download Property photos</p>
             <a
               href="./img/imagecompressor (5).zip"
-              class="btn btn-primary"
+              class="btn btn-primary" 
               >HD Download</a
             >
             <a
               href="./img/Low res 919 hannah ave-20220418T194600Z-001.zip"
-              class="btn btn-primary"
+              class="btn btn-primary" style="margin-left:20px;"
               >MLS Download</a
             >
           </div>
@@ -54,7 +54,7 @@
      <div class="col-sm-6 p-4">
         <div class="card">
           <div class="card-body br">
-            <h5 class="card-title">Features Sheet</h5>
+            <h5 class="card-title">Feature Sheet</h5>
             <p class="card-text">View Property Featured Sheet</p>
             <a
               href="./img/REALTOR PAGE7.pdf"
