--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p class="card-text">Download Property photos</p>
             <a
               href="./img/imagecompressor (5).zip"
-              class="btn btn-primary" 
+              class="btn btn-primary marb" 
               >HD Download</a
             >
             <a
